# my-demo

./: .dockerignore  .env.example  .githubworkflowsci.yml  .gitignore  Dockerfile  README.md  activate.ps1  app.py  docker-compose.yml  pyproject.toml  requirements.txt  run_tests.bat  test_api.py
context_compressor/: __init__.py  config.py  context_compressor.py  extractive.py  generative.py  integrity_checker.py  token_budget.py
data/: feedback.jsonl  rag_cs.db
database/: __init__.py  models.py
docs/: PROJECT_REVIEW.md
escalation_handler/: __init__.py  config.py  escalation_handler.py  escalation_rules.yaml  learning_mechanism.py  sentiment_analyzer.py  session_manager.py  ticket_manager.py  trigger_rules.py
evaluation/: __init__.py  ab_test.py  config.py  evaluator.py  feedback.py  golden_dataset.py  metrics.py
hallucination_guard/: __init__.py  claim_splitter.py  config.py  hallucination_guard.py  nli_checker.py  streaming_protocol.py
hybrid_retriever/: __init__.py  bm25_retriever.py  config.py  fusion.py  hybrid_retriever.py  index_manager.py  metrics.py  reranker.py  vector_retriever.py
memory/: __init__.py  long_term.py  short_term.py
middleware/: __init__.py  tracing.py
observability/: __init__.py  alerting.py  config.py  dashboard.py  metrics_store.py  trace_context.py  tracer.py
query_rewriter/: __init__.py  config.py  consistency_checker.py  conversation_state.py  coreference_rules.py  llm_rewriter.py  query_rewriter.py
routers/: __init__.py  auth.py  escalate.py  feedback.py  health.py  rag.py
safety_enforcer/: __init__.py  config.py  (+7 more)
(+30 files in other folders)
